style: fixes to avoid intro paragraph overlap with navbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,23 +6,22 @@
   --font: Baskervville;
   --font-heading: var(--font);
 
-  --edge-padding: 0.5em;
-
   --font-size: clamp(1.0rem, 3vw, 2.0rem);
   --paragraph-width: 60ch;
   --line-height: 1.3em;
   --letter-spacing: 0.01em;
 
+  --edge-padding: 0.5em;
   --top-padding: var(--edge-padding);
-  --bottom-padding: 3em;
 
   --gap: 0.5em;
+  --grid-columns: 6;
 
   --scroll-shadow: 0px 0px 0.1em 0.1em var(--bg);
 
   --transition-time: 0.3s;
 
-  --grid-columns: 6;
+  --mobile-breakpoint: 500px;
 }
 
 .main-grid {
